--- a/_about.scss
+++ b/_about.scss
@@ -70,6 +70,17 @@ footer {
                 width: 100%;
                 height: 100%;
                 background: red;
+                i {
+                    font-size: 2rem;
+                    text-align: center;
+                    width: 100%;
+                    line-height: 4rem;
+                    color: white;
+                    transition: .5s;
+                }
+            }
+            &:hover i {
+                transform: rotate(360deg);
             }
             .squre2 {
                 width: 100%;
