--- a/_animation.scss
+++ b/_animation.scss
@@ -1,95 +1,110 @@
 .animation {
     width: 100%;
-    padding: 3rem 0;
+    padding: 4rem 0;
     box-sizing: border-box;
     position: relative;
-    // background: blue;
-    h1 {
-        font-size: 2rem;
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-        display: inline-block;
-        text-transform: uppercase;
-        color: red;
-        padding: 0 1rem;
-        border-bottom: .2rem solid black;
+    margin-bottom: 2rem;
+    .menuhead {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        background: black;
+        margin: 2rem 0;
+        a {
+            text-decoration: none;
+            color: white;
+            // width: 150px;
+            background: black;
+            text-align: center;
+            padding: 1rem 1.5rem;
+            text-transform: capitalize;
+            // margin: .2rem 0;
+            transition: .5s;
+            &:hover {
+                background: white;
+                color: black;
+            }
+        }
     }
     .anivideo {
         width: 90%;
+        padding: 2rem 0;
         position: relative;
         left: 50%;
         transform: translateX(-50%);
-        margin-top: 3rem;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: flex-start;
         .videos {
             width: 30%;
-            // border: .1rem solid black;
-            box-sizing: border-box;
-            margin: 1rem 0;
             position: relative;
+            margin: .5rem 0;
+            transition: .5s;
             img {
                 width: 100%;
             }
             .thumbnel {
                 width: 100%;
-                height: 0;
+                height: 0%;
+                background: red;
                 position: absolute;
-                top: 0%;
                 transition: .5s;
+                top: 0%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 h1 {
-                    font-size: 1.2rem;
-                    color: white;
-                    padding: 0%;
-                    padding-right: 3rem;
-                    font-weight: lighter;
-                    top: 50%;
-                    text-align: left;
-                    transition: .5s;
                     display: none;
+                    color: red;
+                    border-bottom: .2rem solid white;
+                    padding-right: 2rem;
+                    text-transform: capitalize;
+                    font-weight: lighter;
+                    cursor: pointer;
+                    transition: .5s;
                     &:hover {
-                        border-color: white;
                         color: black;
+                        border-color: black;
+                        border-radius: .5rem;
                     }
                 }
             }
             &:hover .thumbnel {
-                background: rgb(255, 0, 0);
                 height: 100%;
             }
             &:hover h1 {
-                display: inline-block;
+                display: block;
+                color: white;
+            }
+            &:hover {
+                box-shadow: .2rem .2rem .5rem black;
             }
         }
     }
-    a {
-        background: white;
-        border: .2rem solid black;
-        box-sizing: border-box;
-        color: red;
-        text-decoration: none;
-        font-size: 1.5rem;
+    .seemore {
         position: absolute;
-        text-transform: capitalize;
-        padding: .5rem 1rem;
+        bottom: 0rem;
         right: 5%;
-        bottom: 1.5rem;
-        transition: .5s;
+        background: red;
+        padding: .8rem 2rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: white;
+        // clip-path: polygon(29% 0, 100% 0, 80% 100%, 0 100%, 6% 95%, 74% 90%, 90% 10%);
+        transition: .2s;
         &:hover {
-            background: red;
-            color: white;
-            // border-color: red;
-            // border-color: white;
-            // box-shadow: 0 0 .3rem black;
+            background: black;
+            color: red;
         }
     }
     .line {
         width: 100%;
-        height: .3rem;
-        background: black;
-        margin-top: 3rem;
+        height: .2rem;
+        background: red;
+        position: absolute;
+        bottom: 0%;
     }
 }
