--- a/_recent.scss
+++ b/_recent.scss
@@ -56,7 +56,7 @@
             justify-content: space-evenly;
             align-items: flex-start;
             a {
-                padding: .5rem .5rem;
+                padding: .5rem;
                 // display: inline-block;
                 border: .1rem solid black;
                 background: white;
