--- a/index.css
+++ b/index.css
@@ -125,7 +125,13 @@ header .sliders {
           align-items: center;
 }
 
-header .sliders img {
+header .sliders .mySlides {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+header .sliders .mySlides img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -140,6 +146,9 @@ header .sliders .arrow {
   height: 3rem;
   background: white;
   position: relative;
+  top: 0%;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 header .sliders .arrow img {
@@ -205,6 +214,12 @@ header .slideframe .position .dot {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0 5px;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+header .slideframe .position .dot:hover {
+  background: black;
 }
 
 header .slideframe .find {
@@ -404,6 +419,9 @@ header .slideframe .find .icon:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .social .slink {
@@ -417,11 +435,54 @@ header .slideframe .find .icon:hover {
           box-sizing: border-box;
   -webkit-transition: .5s;
   transition: .5s;
+  position: relative;
+  cursor: pointer;
 }
 
 .social .slink:hover {
   -webkit-box-shadow: 0 0 .1rem black;
           box-shadow: 0 0 .1rem black;
+  background: black;
+  height: 3rem;
+}
+
+.social .slink i {
+  width: 100%;
+  font-size: 1.2rem;
+  text-align: center;
+  line-height: 2rem;
+  color: white;
+}
+
+.social .slink:hover::after {
+  content: 'youtube';
+  position: absolute;
+  color: white;
+  top: -2rem;
+  left: 0;
+  background: black;
+  padding: .2rem;
+  text-transform: capitalize;
+}
+
+.social .slink:hover:nth-child(2)::after {
+  content: 'facebook';
+}
+
+.social .slink:hover:nth-child(3)::after {
+  content: 'github';
+}
+
+.social .slink:hover:nth-child(4)::after {
+  content: 'instagram';
+}
+
+.social .slink:hover:nth-child(5)::after {
+  content: 'profile';
+}
+
+.social .slink:hover:nth-child(6)::after {
+  content: 'darkmode';
 }
 
 .qlink,
@@ -509,7 +570,7 @@ header .slideframe .find .icon:hover {
 }
 
 .recent .recentframe .tools a {
-  padding: .5rem .5rem;
+  padding: .5rem;
   border: .1rem solid black;
   background: white;
   -webkit-box-sizing: border-box;
@@ -724,6 +785,13 @@ header .slideframe .find .icon:hover {
     width: 3.5rem;
     height: 3.5rem;
   }
+  .social .slink i {
+    line-height: 3.5rem;
+    font-size: 2rem;
+  }
+  .social .slink:hover {
+    height: 5rem;
+  }
   #searchupcover {
     width: 5rem;
     height: 5rem;
@@ -791,33 +859,53 @@ header .slideframe .find .icon:hover {
 
 .animation {
   width: 100%;
-  padding: 3rem 0;
+  padding: 4rem 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   position: relative;
+  margin-bottom: 2rem;
 }
 
-.animation h1 {
-  font-size: 2rem;
-  position: relative;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+.animation .menuhead {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: black;
+  margin: 2rem 0;
+}
+
+.animation .menuhead a {
+  text-decoration: none;
+  color: white;
+  background: black;
   text-align: center;
-  display: inline-block;
-  text-transform: uppercase;
-  color: red;
-  padding: 0 1rem;
-  border-bottom: .2rem solid black;
+  padding: 1rem 1.5rem;
+  text-transform: capitalize;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.animation .menuhead a:hover {
+  background: white;
+  color: black;
 }
 
 .animation .anivideo {
   width: 90%;
+  padding: 2rem 0;
   position: relative;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  margin-top: 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -826,14 +914,17 @@ header .slideframe .find .icon:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .animation .anivideo .videos {
   width: 30%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 1rem 0;
   position: relative;
+  margin: .5rem 0;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .animation .anivideo .videos img {
@@ -842,67 +933,79 @@ header .slideframe .find .icon:hover {
 
 .animation .anivideo .videos .thumbnel {
   width: 100%;
-  height: 0;
+  height: 0%;
+  background: red;
   position: absolute;
-  top: 0%;
   -webkit-transition: .5s;
   transition: .5s;
+  top: 0%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .animation .anivideo .videos .thumbnel h1 {
-  font-size: 1.2rem;
-  color: white;
-  padding: 0%;
-  padding-right: 3rem;
+  display: none;
+  color: red;
+  border-bottom: .2rem solid white;
+  padding-right: 2rem;
+  text-transform: capitalize;
   font-weight: lighter;
-  top: 50%;
-  text-align: left;
+  cursor: pointer;
   -webkit-transition: .5s;
   transition: .5s;
-  display: none;
 }
 
 .animation .anivideo .videos .thumbnel h1:hover {
-  border-color: white;
   color: black;
+  border-color: black;
+  border-radius: .5rem;
 }
 
 .animation .anivideo .videos:hover .thumbnel {
-  background: red;
   height: 100%;
 }
 
 .animation .anivideo .videos:hover h1 {
-  display: inline-block;
-}
-
-.animation a {
-  background: white;
-  border: .2rem solid black;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: red;
-  text-decoration: none;
-  font-size: 1.5rem;
-  position: absolute;
-  text-transform: capitalize;
-  padding: .5rem 1rem;
-  right: 5%;
-  bottom: 1.5rem;
-  -webkit-transition: .5s;
-  transition: .5s;
-}
-
-.animation a:hover {
-  background: red;
+  display: block;
   color: white;
+}
+
+.animation .anivideo .videos:hover {
+  -webkit-box-shadow: .2rem .2rem .5rem black;
+          box-shadow: .2rem .2rem .5rem black;
+}
+
+.animation .seemore {
+  position: absolute;
+  bottom: 0rem;
+  right: 5%;
+  background: red;
+  padding: .8rem 2rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.animation .seemore:hover {
+  background: black;
+  color: red;
 }
 
 .animation .line {
   width: 100%;
-  height: .3rem;
-  background: black;
-  margin-top: 3rem;
+  height: .2rem;
+  background: red;
+  position: absolute;
+  bottom: 0%;
 }
 
 article {
@@ -1077,6 +1180,21 @@ footer .social2 .sociallink .squre1 {
   width: 100%;
   height: 100%;
   background: red;
+}
+
+footer .social2 .sociallink .squre1 i {
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+  line-height: 4rem;
+  color: white;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+footer .social2 .sociallink:hover i {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 footer .social2 .sociallink .squre2 {
